Add Elements to Rendu

--- a/RDFSearch/rendu.html
+++ b/RDFSearch/rendu.html
@@ -102,43 +102,30 @@
                    <br/>
 					<div class="innertube">
 						<IMG SRC=http://s-lite.qwant.com/thumbr/355x200/a/4/dcf5380a9960a7d0ad218704aa973b/b_1_q_0_p_0.jpg?u=http%3A%2F%2Fwww.hdwallpapers.in%2Fwalls%2Ftitanic_movie-HD.jpg&q=0&b=1&p=0&a=0&b_id=OIP.O68eHfYJDcOhaq1xxSTcSwEsCo ALT=Titanic>
+                       <h2>Numbers</h2>
+<ul>
+<li>date : 1996</li>
+<li>state : France</li>
 </div>
 				</div>
 			</div>
 			
 			<nav id="leftmenu">
 				<div class="innertube">
-					<p><script type="text/javascript">generateText(5)</script></p>
+					<h2>Actors</h2>
+<p>Kevin Spacey</p>
+<IMG SRC=http://s-lite.qwant.com/thumbr/146x200/2/a/6c0c97dfba07c7fcf5afc1668571a6/b_1_q_0_p_0.jpg?u=http%3A%2F%2Fwww.dvdsreleasedates.com%2Fpictures%2F800%2F13000%2FKevin-Spacey.jpg&q=0&b=1&p=0&a=0&b_id=OIP.j_lGqkBwjrKJJyhcI_2JMQDbEs ALT=Kevin Spacey/>
+<p>Liam Neeson</p>
+<IMG SRC=http://s-lite.qwant.com/thumbr/133x200/0/4/2ea1e2ee5aa844d5b06b530b420a11/b_1_q_0_p_0.jpg?u=http%3A%2F%2Fi4.mirror.co.uk%2Fincoming%2Farticle7346916.ece%2FALTERNATES%2Fs615b%2FLiam_Neeson.jpg&q=0&b=1&p=0&a=0&b_id=OIP.S9Jmbg_Xevj3h4W3_J0ZvgDHEs ALT=Liam Neeson/>
 				</div>
 			</nav>
 			
 			<nav id="rightmenu">
 				<div class="innertube">
-					<h3>Right heading</h3>
-					<ul>
-						<li><a href="#">Link 1</a></li>
-						<li><a href="#">Link 2</a></li>
-						<li><a href="#">Link 3</a></li>
-						<li><a href="#">Link 4</a></li>
-						<li><a href="#">Link 5</a></li>
-					</ul>
-					<h3>Right heading</h3>
-					<ul>
-						<li><a href="#">Link 1</a></li>
-						<li><a href="#">Link 2</a></li>
-						<li><a href="#">Link 3</a></li>
-						<li><a href="#">Link 4</a></li>
-						<li><a href="#">Link 5</a></li>
-					</ul>
-					<h3>Right heading</h3>
-					<ul>
-						<li><a href="#">Link 1</a></li>
-						<li><a href="#">Link 2</a></li>
-						<li><a href="#">Link 3</a></li>
-						<li><a href="#">Link 4</a></li>
-						<li><a href="#">Link 5</a></li>
-					</ul>
-				</div>
+					<h2>Films Associes</h2>
+<p>Die Hard</p>
+<IMG SRC=http://s-lite.qwant.com/thumbr/135x200/2/b/a9e63f2502be747236adcb70b5cabf/b_1_q_0_p_0.jpg?u=http%3A%2F%2F3.bp.blogspot.com%2F-HodAcu6xgxc%2FTueXBtrS0aI%2FAAAAAAAAAZc%2FhCvDnmMRVzA%2Fs1600%2Fdie-hard-original.jpg&q=0&b=1&p=0&a=0&b_id=OIP.Saj0whOXaK3U1e16fzTSTwDKEs ALT=Die Hard/>
+	</div>
 			</nav>
 		</div>
 			<footer id="footer">
