--- a/RDFSearch/rendu.html
+++ b/RDFSearch/rendu.html
@@ -92,7 +92,7 @@
 	<body>
 			<header id="header">
 				<div class="innertube">
-					<h1>Titanic</h1>
+                   <h1>Titanic</h1>
 				</div>
 			</header>
 		<div id="mainwrapper">
@@ -101,11 +101,19 @@
 				<div id="content">
                    <br/>
 					<div class="innertube">
-						<IMG SRC=http://s-lite.qwant.com/thumbr/355x200/a/4/dcf5380a9960a7d0ad218704aa973b/b_1_q_0_p_0.jpg?u=http%3A%2F%2Fwww.hdwallpapers.in%2Fwalls%2Ftitanic_movie-HD.jpg&q=0&b=1&p=0&a=0&b_id=OIP.O68eHfYJDcOhaq1xxSTcSwEsCo ALT=Titanic>
-                       <h2>Numbers</h2>
+<table>
+                       <tr>
+                       	<td>
+								<IMG SRC=http://s-lite.qwant.com/thumbr/355x200/a/4/dcf5380a9960a7d0ad218704aa973b/b_1_q_0_p_0.jpg?u=http%3A%2F%2Fwww.hdwallpapers.in%2Fwalls%2Ftitanic_movie-HD.jpg&q=0&b=1&p=0&a=0&b_id=OIP.O68eHfYJDcOhaq1xxSTcSwEsCo ALT=Titanic>
+                       	</td>
+                       	<td>
+                       		<h2>Numbers</h2>
 <ul>
 <li>date : 1996</li>
 <li>state : France</li>
+             	</td>
+                       </tr>
+                   </table>
 </div>
 				</div>
 			</div>
