--- a/RDFSearch/rendu.html
+++ b/RDFSearch/rendu.html
@@ -6,16 +6,17 @@
 		<title>Titanic</title>
 		<style type="text/css">
 		
-			body{
+			html, body{
 				margin:0;
 				padding:0;
+				height: 90%;
 				font-family: Sans-Serif;
 				line-height: 1.5em;
 			}
 			
 			#header {
 				background: #BCCE98;
-				height: 100px;
+				height: 10%;
 			}
 			
 			#header h1 {
@@ -24,35 +25,35 @@
 			}
 			
 			#mainwrapper {
-				overflow: hidden;
+				height: 100%;
 			}
 			
 			#contentwrapper{
+				height: 100%;
 				float: left;
 				width: 100%;
 			}
 			
 			#content {
 				margin-right: 460px; /* Width of '#rightmenu' and '#leftmenu' combined. */
-				padding-bottom: 10010px;
-				margin-bottom: -10000px;
+				height: 100%;
 			}
 			
 			#leftmenu {
 				float: left;
 				width: 250px;
+				height: 100%;
 				margin-left: -460px; /* Width of '#rightmenu' and '#leftmenu' combined. */
-				padding-bottom: 10010px;
-				margin-bottom: -10000px;
+				overflow: auto;
 				background: #F7FDEB;
 			}
 			
 			#rightmenu {
 				float: left;
 				width: 210px;
+				height: 100%;
 				margin-left: -210px;
-				padding-bottom: 10010px;
-				margin-bottom: -10000px;
+				overflow: auto;
 				background: #DAE9BC;
 			}
 			
@@ -104,7 +105,7 @@
 <table>
                        <tr>
                        	<td>
-								<IMG SRC=http://s-lite.qwant.com/thumbr/355x200/a/4/dcf5380a9960a7d0ad218704aa973b/b_1_q_0_p_0.jpg?u=http%3A%2F%2Fwww.hdwallpapers.in%2Fwalls%2Ftitanic_movie-HD.jpg&q=0&b=1&p=0&a=0&b_id=OIP.O68eHfYJDcOhaq1xxSTcSwEsCo ALT=Titanic>
+								<IMG SRC=http://s-lite.qwant.com/thumbr/355x200/a/4/dcf5380a9960a7d0ad218704aa973b/b_1_q_0_p_0.jpg?u=http%3A%2F%2Fwww.hdwallpapers.in%2Fwalls%2Ftitanic_movie-HD.jpg&q=0&b=1&p=0&a=0&b_id=OIP.O68eHfYJDcOhaq1xxSTcSwHaEK ALT=Titanic>
                        	</td>
                        	<td>
                        		<h2>Numbers</h2>
@@ -121,8 +122,14 @@
 			<nav id="leftmenu">
 				<div class="innertube">
 					<h2>Actors</h2>
+<p>Will Smith</p>
+<IMG SRC=http://s-lite.qwant.com/thumbr/132x200/2/b/d6f5e2139592dc75a88ccb5618f6f5/b_1_q_0_p_0.jpg?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F6%2F65%2FWill_Smith_by_Gage_Skidmore.jpg&q=0&b=1&p=0&a=0&b_id=OIP.6KkDt0RF7jDSwfE3iBZiaQHaLJ ALT=Will Smith/>
 <p>Kevin Spacey</p>
-<IMG SRC=http://s-lite.qwant.com/thumbr/146x200/2/a/6c0c97dfba07c7fcf5afc1668571a6/b_1_q_0_p_0.jpg?u=http%3A%2F%2Fwww.dvdsreleasedates.com%2Fpictures%2F800%2F13000%2FKevin-Spacey.jpg&q=0&b=1&p=0&a=0&b_id=OIP.j_lGqkBwjrKJJyhcI_2JMQDbEs ALT=Kevin Spacey/>
+<IMG SRC=http://s-lite.qwant.com/thumbr/146x200/2/a/6c0c97dfba07c7fcf5afc1668571a6/b_1_q_0_p_0.jpg?u=http%3A%2F%2Fwww.dvdsreleasedates.com%2Fpictures%2F800%2F13000%2FKevin-Spacey.jpg&q=0&b=1&p=0&a=0&b_id=OIP.j_lGqkBwjrKJJyhcI_2JMQHaKH ALT=Kevin Spacey/>
+<p>Will Smith 2</p>
+<IMG SRC=http://s-lite.qwant.com/thumbr/132x200/2/b/d6f5e2139592dc75a88ccb5618f6f5/b_1_q_0_p_0.jpg?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F6%2F65%2FWill_Smith_by_Gage_Skidmore.jpg&q=0&b=1&p=0&a=0&b_id=OIP.6KkDt0RF7jDSwfE3iBZiaQHaLJ ALT=Will Smith 2/>
+<p>Will Smith 3</p>
+<IMG SRC=http://s-lite.qwant.com/thumbr/132x200/2/b/d6f5e2139592dc75a88ccb5618f6f5/b_1_q_0_p_0.jpg?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F6%2F65%2FWill_Smith_by_Gage_Skidmore.jpg&q=0&b=1&p=0&a=0&b_id=OIP.6KkDt0RF7jDSwfE3iBZiaQHaLJ ALT=Will Smith 3/>
 <p>Liam Neeson</p>
 <IMG SRC=http://s-lite.qwant.com/thumbr/133x200/0/4/2ea1e2ee5aa844d5b06b530b420a11/b_1_q_0_p_0.jpg?u=http%3A%2F%2Fi4.mirror.co.uk%2Fincoming%2Farticle7346916.ece%2FALTERNATES%2Fs615b%2FLiam_Neeson.jpg&q=0&b=1&p=0&a=0&b_id=OIP.S9Jmbg_Xevj3h4W3_J0ZvgDHEs ALT=Liam Neeson/>
 				</div>
@@ -131,8 +138,18 @@
 			<nav id="rightmenu">
 				<div class="innertube">
 					<h2>Films Associes</h2>
+<p>Die Hard 3</p>
+<IMG SRC=http://s-lite.qwant.com/thumbr/135x200/2/b/a9e63f2502be747236adcb70b5cabf/b_1_q_0_p_0.jpg?u=http%3A%2F%2F3.bp.blogspot.com%2F-HodAcu6xgxc%2FTueXBtrS0aI%2FAAAAAAAAAZc%2FhCvDnmMRVzA%2Fs1600%2Fdie-hard-original.jpg&q=0&b=1&p=0&a=0&b_id=OIP.Saj0whOXaK3U1e16fzTSTwHaK- ALT=Die Hard 3/>
+<p>Die Hard 4</p>
+<IMG SRC=http://s-lite.qwant.com/thumbr/135x200/2/b/a9e63f2502be747236adcb70b5cabf/b_1_q_0_p_0.jpg?u=http%3A%2F%2F3.bp.blogspot.com%2F-HodAcu6xgxc%2FTueXBtrS0aI%2FAAAAAAAAAZc%2FhCvDnmMRVzA%2Fs1600%2Fdie-hard-original.jpg&q=0&b=1&p=0&a=0&b_id=OIP.Saj0whOXaK3U1e16fzTSTwHaK- ALT=Die Hard 4/>
+<p>Die Hard 1</p>
+<IMG SRC=http://s-lite.qwant.com/thumbr/135x200/2/b/a9e63f2502be747236adcb70b5cabf/b_1_q_0_p_0.jpg?u=http%3A%2F%2F3.bp.blogspot.com%2F-HodAcu6xgxc%2FTueXBtrS0aI%2FAAAAAAAAAZc%2FhCvDnmMRVzA%2Fs1600%2Fdie-hard-original.jpg&q=0&b=1&p=0&a=0&b_id=OIP.Saj0whOXaK3U1e16fzTSTwHaK- ALT=Die Hard 1/>
 <p>Die Hard</p>
-<IMG SRC=http://s-lite.qwant.com/thumbr/135x200/2/b/a9e63f2502be747236adcb70b5cabf/b_1_q_0_p_0.jpg?u=http%3A%2F%2F3.bp.blogspot.com%2F-HodAcu6xgxc%2FTueXBtrS0aI%2FAAAAAAAAAZc%2FhCvDnmMRVzA%2Fs1600%2Fdie-hard-original.jpg&q=0&b=1&p=0&a=0&b_id=OIP.Saj0whOXaK3U1e16fzTSTwDKEs ALT=Die Hard/>
+<IMG SRC=http://s-lite.qwant.com/thumbr/135x200/2/b/a9e63f2502be747236adcb70b5cabf/b_1_q_0_p_0.jpg?u=http%3A%2F%2F3.bp.blogspot.com%2F-HodAcu6xgxc%2FTueXBtrS0aI%2FAAAAAAAAAZc%2FhCvDnmMRVzA%2Fs1600%2Fdie-hard-original.jpg&q=0&b=1&p=0&a=0&b_id=OIP.Saj0whOXaK3U1e16fzTSTwHaK- ALT=Die Hard/>
+<p>Die Hard 2</p>
+<IMG SRC=http://s-lite.qwant.com/thumbr/135x200/2/b/a9e63f2502be747236adcb70b5cabf/b_1_q_0_p_0.jpg?u=http%3A%2F%2F3.bp.blogspot.com%2F-HodAcu6xgxc%2FTueXBtrS0aI%2FAAAAAAAAAZc%2FhCvDnmMRVzA%2Fs1600%2Fdie-hard-original.jpg&q=0&b=1&p=0&a=0&b_id=OIP.Saj0whOXaK3U1e16fzTSTwHaK- ALT=Die Hard 2/>
+<p>Die Hard 5</p>
+<IMG SRC=http://s-lite.qwant.com/thumbr/135x200/2/b/a9e63f2502be747236adcb70b5cabf/b_1_q_0_p_0.jpg?u=http%3A%2F%2F3.bp.blogspot.com%2F-HodAcu6xgxc%2FTueXBtrS0aI%2FAAAAAAAAAZc%2FhCvDnmMRVzA%2Fs1600%2Fdie-hard-original.jpg&q=0&b=1&p=0&a=0&b_id=OIP.Saj0whOXaK3U1e16fzTSTwHaK- ALT=Die Hard 5/>
 	</div>
 			</nav>
 		</div>
